--- a/TriviaApp/Base.lproj/Main.storyboard
+++ b/TriviaApp/Base.lproj/Main.storyboard
@@ -39,7 +39,7 @@
                                     <action selector="buttonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="r7Z-My-rFJ"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kow-Mb-Lpb">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kow-Mb-Lpb">
                                 <rect key="frame" x="32" y="122" width="351" height="44"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" name="Farah" family="Farah" pointSize="17"/>
@@ -57,12 +57,17 @@
                                 <rect key="frame" x="132" y="89" width="150" height="2"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </progressView>
+                            <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" fixedFrame="YES" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="xei-WZ-Whx">
+                                <rect key="frame" x="114" y="174" width="150" height="2"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </progressView>
                         </subviews>
                         <color key="backgroundColor" red="0.050276363610681621" green="0.1191787042356893" blue="0.44951618020304573" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
                         <outlet property="progressBar" destination="8bC-Xf-vdC" id="zQf-v5-ObU"/>
+                        <outlet property="progressView" destination="xei-WZ-Whx" id="hDj-wn-cJO"/>
                         <outlet property="questionLabel" destination="kow-Mb-Lpb" id="Z5p-vu-Rak"/>
                         <outlet property="scoreLabel" destination="pRm-IK-XQP" id="fAQ-Uy-A9a"/>
                     </connections>
